# durian-maturity-classification

./: .gitignore  README.md  clean_dataset.ipynb  convert.py  data_augmentation.ipynb  data_augmentation_full.ipynb  data_augmentation_train_k_folds.ipynb  data_augmentation_train_only.ipynb  data_preparation.ipynb  docker-compose.yml  durian_classification.ipynb  pyproject.toml
.github/workflows/: main.yml
durian-app/: .gitignore  app.json  package-lock.json  package.json
durian-app/app/(tabs)/: _layout.tsx  index.tsx  training.tsx
durian-app/components/: AudioInputSelector.tsx  AudioRecorder.tsx  Loader.tsx
durian-backoffice/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
durian-backoffice/src/: App.tsx  index.css
durian-backoffice/src/components/: audio-player.tsx  audio-recorder.tsx  audio-upload-form.tsx  audio-upload-predict.tsx  classification-result.tsx  models-list.tsx  offline-queue-status.tsx  predict-page.tsx  records-list.tsx  training-data-list.tsx
durian-backoffice/src/hooks/: use-mobile.ts  use-network-status.ts  use-offline-queue.ts
durian-backoffice/src/lib/: config.ts
durian-backoffice/src/services/: classify.ts  models.ts  offline-queue.ts  records.ts  training.ts
reports/: durian_classification.ipynb
server/: Dockerfile  big_server.py  lite_server.py  requirements.txt  server.py
src/: main.py  mfcc.ipynb
