[project]
name = "durian-maturity-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "Antoine Maïstre-Rice", email = "antoinemaitre06@gmail.com"}
]
requires-python = ">=3.11" 
dependencies = ["tensorflow (>=2.19.0,<3.0.0)", "librosa (>=0.11.0,<0.12.0)", "matplotlib (>=3.10.3,<4.0.0)"]

readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false
