[project]
name = "durian-maturity-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "Antoine Maïstre-Rice", email = "antoinemaitre06@gmail.com"}
]
requires-python = "3.12" 
dependencies = ["tensorflow (>=2.19.0,<3.0.0)", "matplotlib (>=3.10.3,<4.0.0)", "tqdm (>=4.67.1,<5.0.0)", "torchaudio (>=2.7.0,<3.0.0)", "silero-vad (>=5.1.2,<6.0.0)", "librosa (==0.10.1)", "audiomentations (>=0.41.0,<0.42.0)", "quart (>=0.20.0,<0.21.0)", "cors (>=1.0.1,<2.0.0)", "keras2onnx (>=1.7.0,<2.0.0)", "tf2onnx (>=1.16.1,<2.0.0)", "pydub (>=0.25.1,<0.26.0)"]

readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

